# meal-planner

./: .gitignore  pyproject.toml  todo.md
src/meal_planner/: __init__.py  __main__.py  config.py  meal_plan.py  recipe.py  text_ui.py
tests/: test_yaml.py
